--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
-
+*,*:after,*:before{
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box; 
+-ms-box-sizing: border-box;
+box-sizing: border-box;
 body {
-  background-color: #f0f000;
+  background-color: #f0f0f0;
   font-family: Arial, sans-serif;
 }
 
